# IsroProject

ascend_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ascend_ws/install/ascend_bringup/share/ascend_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ascend_ws/install/ascend_communication/share/ascend_communication/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ascend_ws/install/ascend_docking/share/ascend_docking/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ascend_ws/install/ascend_msgs/share/ascend_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ascend_ws/install/ascend_navigation/share/ascend_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ascend_ws/src/ascend_bringup/: package.xml  setup.cfg  setup.py
ascend_ws/src/ascend_bringup/ascend_bringup/: mission_state_machine.py
ascend_ws/src/ascend_communication/: package.xml  setup.cfg  setup.py
ascend_ws/src/ascend_communication/ascend_communication/: px4_bridge.py
ascend_ws/src/ascend_docking/: setup.cfg  setup.py
ascend_ws/src/ascend_msgs/: CMakeLists.txt  package.xml
ascend_ws/src/ascend_msgs/msg/: DockStatus.msg  MissionState.msg  TargetDetection.msg
ascend_ws/src/ascend_navigation/: package.xml  setup.cfg  setup.py
ascend_ws/src/ascend_navigation/ascend_navigation/: coverage_planner.py
ascend_ws/src/ascend_perception/: package.xml  setup.cfg  setup.py
(+97 files in other folders)
